Se creó con Colab

--- a/Avance1_19.ipynb
+++ b/Avance1_19.ipynb
@@ -953,7 +953,7 @@
         "# Para explorar la distribución de datos numéricos basados ​​en algunas variables categóricas representativas,\n",
         "# seleccionaremos algunas columnas categóricas clave y graficaremos la distribución de datos numéricos con respecto a ellas.\n",
         "\n",
-        "# Elejimo columnas numéricas y categóricas representativas para la exploración\n",
+        "# Elejimos columnas numéricas y categóricas representativas para la exploración\n",
         "numeric_columns = ['edad', 'imc', 'peso', 'glucosa']\n",
         "categorical_columns = ['sexo', 'obesidad', 'Diabetes Mellitus (DM)']\n",
         "\n",
